--- a/assets/style.css
+++ b/assets/style.css
@@ -66,15 +66,25 @@ a:hover {
 }
 
 #logo {
+  position: relative;
   width: 190px;
-  height: 64px;
+  height: 190px;
   margin: 15px 0 0 15px;
-  background: url("logo.png");
-  text-indent: -99999px;
+  background: url("logo.jpg");
+  background-size: contain;
+  border-radius: 5px;
 }
 
 #logo h1 {
   margin: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  color: #f8f8f8;
+  padding-top: 20px;
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
 }
 
 div.header {
