--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2173,7 +2173,7 @@
 				left: 0;
 				width: 100%;
 				height: 100%;
-				background: url("http://hdwyn.com/wallpaper_mirror/south_africa_republic_of_texture_background_hd-wallpaper-49005.jpg");
+				background: url("../../images/flagsplatter.jpg");
 				content: "";
 				z-index: -1;
 				background-size: cover;
