--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2163,10 +2163,10 @@
 			}
 
 			#main > section.one {
+				position: relative;
 				background-color: #81918E;
 				/*background-image: url("../../images/banner.jpg");*/
 				background: rgba(0,0,0,0.3);
-				text-shadow: 0 0 50px #555, 0 0 5px #555, 0 0 20px #555;
 				min-height: 100vh;
 			}
 			#main > section.one:before {
@@ -2175,14 +2175,15 @@
 				left: 0;
 				width: 100%;
 				height: 100%;
-				background: url("../../images/flagsplatter.jpg");
+				background: url("../../images/flagsplatter.jpg") left center;
+				background-size: cover;
 				content: "";
 				z-index: -1;
-				background-size: cover;
 			}
 			#main > section.one p,
 			#main > section.one h2 {
 				color: #eee;
+				text-shadow: 0 0 50px #333, 0 0 20px #333, 0 0 5px #333;
 			}
 
 			#main > section.two {
