--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/img/apple-touch-icon.png">
-  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/favicon.ico">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/favicon.png">
 
   <!-- CSS files -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
